--- a/app/app.css
+++ b/app/app.css
@@ -1,32 +1,4 @@
 /* --------------------------------------
-   Fonts
-   -------------------------------------- */
-.material-icons {
-    font-family: 'Material Icons', sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
-
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
-
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
-
-    /* Support for IE. */
-    font-feature-settings: 'liga';
-}
-
-/* --------------------------------------
    Global Styles
    -------------------------------------- */
 body {
@@ -70,6 +42,10 @@ app-header .flex-row-nowrap {
     border-bottom: 2px solid coral;
 }
 
+app-header * {
+    font-weight: 600;
+}
+
 app-header ul {
     display: flex;
     list-style: none;
@@ -90,6 +66,10 @@ app-header a.active {
    -------------------------------------- */
 .about {
     padding: 15px;
+}
+
+.about .contacts {
+    text-align: right;
 }
 
 /* --------------------------------------
@@ -120,24 +100,3 @@ app-header a.active {
 /* --------------------------------------
    Media Queries
    -------------------------------------- */
-/* Portrait & landscape phone */
-@media (max-width: 480px) {
-
-}
-
-/* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
-}
-
-@media (max-width: 1024px) {
-
-}
-
-@media screen and (max-device-width: 767px) {
-
-}
-
-/* Large desktop */
-@media (min-width: 1024px) {
-
-}
